tests/paczka1/fuzzy1/45572767.err
Error in line 1: A278 A433 54,7
Error in line 4: A278 S472 33,2
Error in line 5: A278 A278 42,1
Error in line 16: BkvK3LZR3pQ A278 80,7
Error in line 26: BkvK3LZR3pQ S472 31,1
Error in line 29: HZJsQmVd A278 39,3
